--- a/About.html
+++ b/About.html
@@ -1,37 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About V.C.R</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About V.C.R</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header>
-        <h1>V.C.R - The Artist</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section class="about-content">
-            <img src="images/VCRphoto2.jpg" alt="V.C.R - The Artist">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-            <p>More about V.C.R's journey in art and music...</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2025 V.C.R. All rights reserved.</p>
-        <p>Designed by IndieNTM</p>
-    </footer>
-
-    <script src="script.js"></script>
+  <header>
+    <img id="logo" src="assets/VCRlogo.png" alt="V.C.R Logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="about-content">
+      <img src="images/VCRphoto2.jpg" alt="V.C.R - The Artist">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nulla vitae ultrices porta, felis felis commodo nibh, id imperdiet purus dolor sed ligula.</p>
+      <p>More about V.C.R's journey in art and music...</p>
+    </section>
+  </main>
+  <footer>
+    <p>&copy; 2025 V.C.R. All rights reserved.</p>
+    <p>Designed by IndieNTM</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
