--- a/Index.html
+++ b/Index.html
@@ -1,45 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V.C.R - Home</title>
-    <link rel="stylesheet" href="Styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>V.C.R - Home</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <header>
-        <h1>V.C.R</h1>
-        <nav>
-            <ul>
-                <li><a href="Index.html">Home</a></li>
-                <li><a href="About.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <!-- Custom Greeting -->
-        <section id="greeting"></section>
-    
-        <!-- Image Slideshow -->
-        <section class="slideshow">
-            <img id="slideshow-img" src="assets/VCRphoto1.jpg" alt="V.C.R Image">
-        </section>
-    </main>
-    
-
-    <!-- Rotating Logo at the Bottom -->
-    <div class="bottom-logo">
-        <img id="hover-logo" src="assets/VCRlogo.png" alt="V.C.R Logo">
+  <!-- Logo at the Top -->
+  <header>
+    <img id="logo" src="assets/VCRlogo.png" alt="V.C.R Logo">
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <!-- Custom Greeting (only on landing) positioned at top right -->
+  <section id="greeting"></section>
+  
+  <!-- Banner Section: Left (Slideshow) & Right (Buttons) -->
+  <main>
+    <div class="banner">
+      <div class="banner-left">
+        <!-- Enlarged Slideshow Image -->
+        <img id="slideshow-img" src="assets/VCRphoto1.jpg" alt="V.C.R Image">
+      </div>
+      <div class="banner-right">
+        <!-- Banner Buttons -->
+        <button onclick="window.location.href='about.html'">About V.C.R</button>
+        <button onclick="window.location.href='contact.html'">Get in Touch</button>
+      </div>
     </div>
-
-    <footer>
-        <p>&copy; 2025 V.C.R. All rights reserved.</p>
-        <p>Designed by IndieNTM</p>
-    </footer>
-
-    <script src="Script.js"></script>
+  </main>
+  
+  <footer>
+    <p>&copy; 2025 V.C.R. All rights reserved.</p>
+    <p>Designed by IndieNTM</p>
+  </footer>
+  
+  <script src="script.js"></script>
 </body>
 </html>
