--- a/About.html
+++ b/About.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Meta information and stylesheet link -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About V.C.R</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- Header Section -->
   <header>
+    <!-- Logo at the top -->
     <img id="logo" src="assets/VCRlogo.png" alt="V.C.R Logo">
+    <!-- Navigation Menu -->
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -17,17 +21,25 @@
       </ul>
     </nav>
   </header>
+  
+  <!-- Main Content Section -->
   <main>
     <section class="about-content">
+      <!-- Image representing V.C.R -->
       <img src="images/VCRphoto2.jpg" alt="V.C.R - The Artist">
+      <!-- About V.C.R content -->
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nulla vitae ultrices porta, felis felis commodo nibh, id imperdiet purus dolor sed ligula.</p>
       <p>More about V.C.R's journey in art and music...</p>
     </section>
   </main>
+  
+  <!-- Footer Section -->
   <footer>
     <p>&copy; 2025 V.C.R. All rights reserved.</p>
     <p>Designed by IndieNTM</p>
   </footer>
+  
+  <!-- Link to JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
