--- a/About.html
+++ b/About.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Meta information and stylesheet link -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About V.C.R</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- Header Section -->
   <header>
-    <!-- Logo at the top -->
     <img id="logo" src="assets/VCRlogo.png" alt="V.C.R Logo">
-    <!-- Navigation Menu -->
     <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -21,25 +17,22 @@
       </ul>
     </nav>
   </header>
-  
-  <!-- Main Content Section -->
   <main>
     <section class="about-content">
-      <!-- Image representing V.C.R -->
       <img src="images/VCRphoto2.jpg" alt="V.C.R - The Artist">
-      <!-- About V.C.R content -->
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec auctor, nulla vitae ultrices porta, felis felis commodo nibh, id imperdiet purus dolor sed ligula.</p>
+      <p>V.C.R, born Veronica Camille Ratliff, is a world-class multidisciplinary singer/songwriter, composer, violinist, and published author. The Memphis-bred recording artist blends cathartic lyrics combined with her powerhouse vocals that entrance the listener and leaves them breathless. As a storyteller, this transcendental soul-singer uses amalgamations of her rich southern gospel roots and classical orchestral training to produce songs rooted in vulnerability and truth.
+        Born into a distinguished musical family in Memphis Tennessee, she was academically incubated as a toddler. By five years old, her musical training began starting with a gospel choir, classical violin lessons, and piano. Homeschooled during her formative years, her mother taught her to read and write, while her father taught her music theory, and choral vocal production beginning at age four. She played in symphony orchestras, studied at conservatories like Phillips Andover Academy, and sang in gospel choirs until she graduated college in 2017 with a music degree.
+        
+        After graduating she moved to Los Angeles working tirelessly as a session violinist and an Art Docent at the Underground Museum under Karon Davis and Khalil Joseph. There she befriended the likes of Mndgsn, Sudan Archives, Swarvy, Kelsey Lu, and Pink Siifu who served as creative catalysts for her music career. Since 2015, she has released several singles including “Lilli Lotus” and “Butter” which were instant fan favorites. Her name caught fire in 2019 with the release of her self-produced song “Minnie Lives” featuring Pink Siifu and since has performed on The Late Late Show with James Cordon, at Afropunk, and at the LVI Super Bowl Honors to name a few. Also in 2019, she wrote her first book entitled “The Creative Black Woman’s Playbook” and it sold out 300 copies within the first few months internationally.
+        
+        Like her love of cooking, V.C.R mixes her eclectic musical background to carefully conjure songs that are not only healing and one-of-kind, but direct tributes to her favorite singers and composers such as Minnie Riperton, JDilla, Chaka Khan, and Tchaikovsky. The hybridization of her direct influences, gospel, soul, funk, and classical music combined to birth her own genre called “CINEMATIC SOUL”. Her dreamy movie-like approach to her music takes the listener on a journey transporting them to their own universe..</p>
       <p>More about V.C.R's journey in art and music...</p>
     </section>
   </main>
-  
-  <!-- Footer Section -->
   <footer>
     <p>&copy; 2025 V.C.R. All rights reserved.</p>
     <p>Designed by IndieNTM</p>
   </footer>
-  
-  <!-- Link to JavaScript file -->
   <script src="script.js"></script>
 </body>
 </html>
